grammar.js
		source_file: ($) =>
			seq(
				repeat(choice(";", "\n")),
				optional($.program_declaration),
				optional(
					seq(
						$._statement,
						repeat(seq(repeat1(choice(";", "\n")), $._statement)),
						repeat(choice(";", "\n")),
					),
				),
			),

		// Program declaration (package name)
		_statement: ($) =>
			choice(
				$.import_statement,
				$.function_declaration,
				$.constant_declaration,
				$.enum_declaration,
				$.struct_declaration,
				$.alias_declaration,
				$.union_declaration,
				$.tuple_assignment,
				$.variable_declaration,
				$.if_statement,
				$.switch_statement,
				$.loop_statement,
				$.when_statement,
				$.return_statement,
				$.halt_statement,
				$.next_statement,
				$.method_call,
				$.call_expression,
			),

		comment: ($) => token(prec(1, seq("?", /[^?].*/))),

		// Import statement
		import_statement: ($) => seq("import", field("path", $.string)),

		// Function declaration with @ prefix and optional :: syntax (always multi-line, always needs end)
		function_declaration: ($) =>
			seq(
				"@",
				field("name", $.identifier),
				optional("::"),
				"|",
				optional($.parameter_list),
				"|",
				optional(field("return_type", $.return_types)),
				":",
				field("body", $.function_body),
			),

		parameter_list: ($) => seq($.parameter, repeat(seq(",", $.parameter))),

		parameter: ($) =>
			seq(
				field("name", $.identifier),
				optional(seq(":", field("type", $.type)))
			),

		type: ($) =>
			choice(
				"int",
				"float",
				"string",
				"bool",
				"dict",
				"vector2",
				"color",
				$.identifier,
			),

		// Variable declaration
		variable_declaration: ($) =>
			choice(
				// Typed variable: x:int= 5
				seq(
					field("name", $.identifier),
					":",
					field("type", $.type),
					"=",
					field("value", $.expression)
				),
				// Inferred type: x: 5
				seq(field("name", $.identifier), ":", field("value", $.expression))
			),

		// Constant declaration
		if_statement: ($) =>
			choice(
				// Single-line: if x then a|| anif y then b|| else c||
				$.if_statement_oneline,
				// Multi-line: if x: ... end
				$.if_statement_multiline,
			),

		loop_statement: ($) =>
			choice(
				// Single-line: loop i:0 to 10 do print|i|
				$.loop_statement_oneline,
				// Multi-line: loop i:0 to 10 do ... end
				$.loop_statement_multiline,
			),

		when_statement: ($) =>
			seq(
				"when",
				field("condition", $.identifier),
				"then",
				field("body", $.when_body),
			),

		return_statement: ($) =>
			prec.right(
				seq("return", optional(field("value", $.expression_list_or_single))),
			),

		binary_expression: ($) =>
			choice(
				// Logical OR
				prec.left(
					1,
					seq(
						field("left", $.expression),
						field("operator", "or"),
						field("right", $.expression),
					),
				),
				// Logical AND
				prec.left(
					2,
					seq(
						field("left", $.expression),
						field("operator", "and"),
						field("right", $.expression),
					),
				),
				// Comparison
				prec.left(
					3,
					seq(
						field("left", $.expression),
						field(
							"operator",
							choice("is", ">", "<", ">=", "<=", "greater_than", "less_than"),
						),
						field("right", $.expression),
					),
				),
				// Addition/Subtraction
				prec.left(
					4,
					seq(
						field("left", $.expression),
						field("operator", choice("+", "-", "plus", "minus")),
						field("right", $.expression),
					),
				),
				// Multiplication/Division/Modulo
				prec.left(
					5,
					seq(
						field("left", $.expression),
						field("operator", choice("*", "/", "%", "times", "div", "mod")),
						field("right", $.expression),
					),
				),
				// Power/Exponentiation (right-associative)
				prec.right(
					6,
					seq(
						field("left", $.expression),
						field("operator", choice("**", "pow")),
						field("right", $.expression),
					),
				),
			),

		// Unary expressions
		call_expression: ($) =>
			prec(
				7,
				seq(
					field("function", $.identifier),
					"|",
					optional($.argument_list),
					"|",
				),
			),

		argument_list: ($) => seq($.expression, repeat(seq(",", $.expression))),

		// Method call (arr.map||, arr.push|val|)
		array_access: ($) =>
			prec(
				8,
				seq(
					field("array", choice($.identifier, $.call_expression)),
					"[",
					field("index", $.expression),
					"]",
				),
			),

		// Dict access with {}
		dict_access: ($) =>
			prec(
				8,
				seq(
					field("dict", choice($.identifier, $.call_expression)),
					"{",
					field("key", $.string),
					"}",
				),
			),

		// Member access with dot notation
		array_literal: ($) =>
			seq(
				"[",
				optional(seq($.expression, repeat(seq(",", $.expression)))),
				"]",
			),

		// Dict literal with {}
		dict_literal: ($) =>
			seq("{", optional(seq($.dict_pair, repeat(seq(",", $.dict_pair)))), "}"),

		// Object literal with <>
		// Object literal with {} - object{key: value, key2: value2}
		dict_pair: ($) =>
			seq(field("key", $.string), ":", field("value", $.expression)),

		// Parenthesized expression
		identifier: ($) => /[a-zA-Z_][a-zA-Z0-9_]*/,

		number: ($) =>
			choice(
				/\d[\d_]*\.\d[\d_]*/, // float with underscores (e.g., 1_000.50)
				/\d[\d_]*/, // int with underscores (e.g., 1_000_000)
			),

		string: ($) => token(seq('"', repeat(choice(/[^"\\]/, /\\./)), '"')),

		// Raw string (backtick) - preserves newlines, no escape sequences
		boolean: ($) => choice("true", "false"),
	},
});
